<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginLeft="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/select_batter_number_popup_insert_point"
        android:orientation="vertical"
        android:layout_marginLeft="400dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

    <TextView
        android:id="@+id/enterBatterTextbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_batter_name"
        android:textStyle="bold"
        android:textSize="25sp"/>/>

    <EditText
        android:id="@+id/newBatterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="textCapWords|textNoSuggestions" />


    <Button
        android:id="@+id/selectBatterNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_batter_number"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/selectBatterPositionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_batter_position"
        android:textSize="25sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/setButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:textSize="25sp"/>
    </LinearLayout>
</LinearLayout>


